refactor: domain 패키지 추가 리팩토링